--- a/slides/01-model.html
+++ b/slides/01-model.html
@@ -4,8 +4,7 @@
     <title>Build a model</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
-    <meta name="date" content="2020-04-22" />
-    <script src="libs/header-attrs/header-attrs.js"></script>
+    <meta name="date" content="2020-04-23" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/font-awesome/css/fontawesome-all.min.css" rel="stylesheet" />
     <link href="libs/countdown/countdown.css" rel="stylesheet" />
@@ -351,7 +350,7 @@ Write a pipe that creates a model that uses `lm()` to fit a linear regression. S
 *Hint: you'll need https://tidymodels.github.io/parsnip/articles/articles/Models.html*
 
 
-<div class="countdown" id="timer_5ea0cdd0" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea121b8" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -423,7 +422,7 @@ give the same results as
 lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 ```
 
-<div class="countdown" id="timer_5ea0cd54" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea12375" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -446,7 +445,7 @@ lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 lm_fit
 &gt; parsnip model object
 &gt; 
-&gt; Fit time:  1ms 
+&gt; Fit time:  2ms 
 &gt; 
 &gt; Call:
 &gt; stats::lm(formula = formula, data = data)
@@ -532,7 +531,7 @@ Fill in the blanks. Use `predict()` to
 
 *Hint: Be sure to remove every `_` before running the code!*
 
-<div class="countdown" id="timer_5ea0ccf2" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea12264" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -782,7 +781,7 @@ In your teams, decide which model:
 
 ]
 
-<div class="countdown" id="timer_5ea0cdb6" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea12275" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -871,7 +870,6 @@ initial_split(data, prop = 3/4)
 ```r
 ames_split &lt;- initial_split(ames, prop = 0.75)
 ames_split
-&gt; &lt;Training/Validation/Total&gt;
 &gt; &lt;2198/732/2930&gt;
 ```
 
@@ -984,7 +982,7 @@ Use `initial_split()`, `training()`, `testing()`, `lm()` and `rmse()` to:
 
 Keep `set.seed(100)` at the start of your code.
 
-<div class="countdown" id="timer_5ea0ca48" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea12254" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1132,7 +1130,6 @@ price_pred  &lt;- lm_fit %&gt;%
 
 rmse(price_pred, truth = price_truth, estimate = .pred)
 ```
-
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
@@ -1185,20 +1182,30 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
 })();
 (function() {
   "use strict"
-  // Replace <script> tags in slides area to make them executable
+  /* Replace <script> tags in slides area to make them executable
+   *
+   * Runs after post-processing of markdown source into slides and replaces only
+   * <script>s on the last slide of continued slides using the .has-continuation
+   * class added by xaringan. Finally, any <script>s in the slides area that
+   * aren't executed are commented out.
+   */
   var scripts = document.querySelectorAll(
-    '.remark-slides-area .remark-slide-container script'
+    '.remark-slides-area .remark-slide-container:not(.has-continuation) script'
   );
   if (!scripts.length) return;
   for (var i = 0; i < scripts.length; i++) {
     var s = document.createElement('script');
     var code = document.createTextNode(scripts[i].textContent);
     s.appendChild(code);
-    var scriptAttrs = scripts[i].attributes;
-    for (var j = 0; j < scriptAttrs.length; j++) {
-      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
-    }
     scripts[i].parentElement.replaceChild(s, scripts[i]);
+  }
+  var scriptsNotExecuted = document.querySelectorAll(
+    '.remark-slides-area .remark-slide-container.has-continuation script'
+  );
+  if (!scriptsNotExecuted.length) return;
+  for (var i = 0; i < scriptsNotExecuted.length; i++) {
+    var comment = document.createComment(scriptsNotExecuted[i].outerHTML)
+    scriptsNotExecuted[i].parentElement.replaceChild(comment, scriptsNotExecuted[i])
   }
 })();
 (function() {
