--- a/slides/02-recipes.html
+++ b/slides/02-recipes.html
@@ -32,7 +32,7 @@ class: title-slide, center, bottom
 
 # Preprocess your data
 
-## Tidymodels, Virtually: 1
+## Tidymodels, Virtually: 2
 
 ### Alison Hill 
 
@@ -171,7 +171,7 @@ Transforms variables into the orthogonal "components" that most concisely captur
 
 
 
-&lt;img src="figs/01-predicting/unnamed-chunk-3-1.png" width="38%" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/02-recipes/unnamed-chunk-3-1.png" width="38%" style="display: block; margin: auto;" /&gt;
 
 ---
 class: middle, center, frame
@@ -995,7 +995,7 @@ Write a recipe for the `Sale_Price ~ .` variables that:
 
 Save the result as `pca_rec`
 
-<div class="countdown" id="timer_5ea0cb77" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea12560" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1067,7 +1067,7 @@ class: your-turn
 
 Make a workflow that combines `pca_rec` and with `lm_spec`.
 
-<div class="countdown" id="timer_5ea0cb70" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea12276" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1145,7 +1145,7 @@ class: your-turn
 
 Try our pca workflow to predict sale price with the `ames_test` data. What is the RMSE?
 
-<div class="countdown" id="timer_5ea0cd5c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea12554" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1192,7 +1192,7 @@ Then update `pca_wf` to use the new recipe.
 
 *Hint: Guess. Use tab completion. Or visit http://tidymodels.github.io/recipes/reference/index.html.*
 
-<div class="countdown" id="timer_5ea0ca53" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea12529" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
