--- a/slides/01-model.html
+++ b/slides/01-model.html
@@ -371,7 +371,7 @@ Write a pipe that creates a model that uses `lm()` to fit a linear regression. S
 *Hint: you'll need https://tidymodels.github.io/parsnip/articles/articles/Models.html*
 
 
-<div class="countdown" id="timer_5ea1ab69" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1b2dc" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -443,7 +443,7 @@ give the same results as
 lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 ```
 
-<div class="countdown" id="timer_5ea1ae74" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1b319" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -466,7 +466,7 @@ lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 lm_fit
 &gt; parsnip model object
 &gt; 
-&gt; Fit time:  2ms 
+&gt; Fit time:  3ms 
 &gt; 
 &gt; Call:
 &gt; stats::lm(formula = formula, data = data)
@@ -552,7 +552,7 @@ Fill in the blanks. Use `predict()` to
 
 *Hint: Be sure to remove every `_` before running the code!*
 
-<div class="countdown" id="timer_5ea1ad84" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1b081" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -705,7 +705,7 @@ data `(y)` + predictions = metrics
 ---
 class: middle, center, inverse
 
-# A model doesn't have to be a straight line!
+# A model doesn't have to be a straight&amp;nbsp;line!
 
 ---
 exclude: true
@@ -802,7 +802,7 @@ In your teams, decide which model:
 
 ]
 
-<div class="countdown" id="timer_5ea1ac02" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1b0d6" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1003,7 +1003,7 @@ Use `initial_split()`, `training()`, `testing()`, `lm()` and `rmse()` to:
 
 Keep `set.seed(100)` at the start of your code.
 
-<div class="countdown" id="timer_5ea1add2" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1b266" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
