--- a/slides/01-model.html
+++ b/slides/01-model.html
@@ -371,7 +371,7 @@ Write a pipe that creates a model that uses `lm()` to fit a linear regression. S
 *Hint: you'll need https://tidymodels.github.io/parsnip/articles/articles/Models.html*
 
 
-<div class="countdown" id="timer_5ea1bf87" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1c9fc" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -443,7 +443,7 @@ give the same results as
 lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 ```
 
-<div class="countdown" id="timer_5ea1be7c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1c9e2" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -552,7 +552,7 @@ Fill in the blanks. Use `predict()` to
 
 *Hint: Be sure to remove every `_` before running the code!*
 
-<div class="countdown" id="timer_5ea1c0f1" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1ca52" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -802,7 +802,7 @@ In your teams, decide which model:
 
 ]
 
-<div class="countdown" id="timer_5ea1c0ea" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1c967" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1003,7 +1003,7 @@ Use `initial_split()`, `training()`, `testing()`, `lm()` and `rmse()` to:
 
 Keep `set.seed(100)` at the start of your code.
 
-<div class="countdown" id="timer_5ea1bfc4" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1c742" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
