--- a/slides/01-model.html
+++ b/slides/01-model.html
@@ -4,7 +4,7 @@
     <title>Build a model</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
-    <meta name="date" content="2020-04-22" />
+    <meta name="date" content="2020-04-23" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/font-awesome/css/fontawesome-all.min.css" rel="stylesheet" />
@@ -66,6 +66,15 @@ class: middle, center
 
 My name is Alison Hill, and I'm a data scientist and professional educator at RStudio.
 
+---
+class: middle, center, inverse
+
+
+# What is the goal of predictive modeling?
+
+--
+
+# What is the goal of machine learning?
 
 ---
 class: middle, center, frame
@@ -351,7 +360,7 @@ Write a pipe that creates a model that uses `lm()` to fit a linear regression. S
 *Hint: you'll need https://tidymodels.github.io/parsnip/articles/articles/Models.html*
 
 
-<div class="countdown" id="timer_5ea1238e" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1c9a9" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -423,7 +432,7 @@ give the same results as
 lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 ```
 
-<div class="countdown" id="timer_5ea1233c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1c90f" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -532,7 +541,7 @@ Fill in the blanks. Use `predict()` to
 
 *Hint: Be sure to remove every `_` before running the code!*
 
-<div class="countdown" id="timer_5ea12481" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1c9cc" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -782,7 +791,7 @@ In your teams, decide which model:
 
 ]
 
-<div class="countdown" id="timer_5ea124c4" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1c7cd" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -984,7 +993,7 @@ Use `initial_split()`, `training()`, `testing()`, `lm()` and `rmse()` to:
 
 Keep `set.seed(100)` at the start of your code.
 
-<div class="countdown" id="timer_5ea1225c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1c98d" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
