switch recipes and resample

--- a/slides/04-ensemble.html
+++ b/slides/04-ensemble.html
@@ -36,7 +36,7 @@ class: title-slide, center, bottom
 
 # Ensemble Models
 
-## Tidymodels, Virtually: 4
+## Tidymodels, Virtually &amp;mdash; Session 04
 
 ### Alison Hill 
 
@@ -182,7 +182,7 @@ class: your-turn
 
 Fill in the blanks to return the accuracy and ROC AUC for this model using 10-fold cross-validation.
 
-<div class="countdown" id="timer_5ea1c5e7" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d2a5" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -486,7 +486,7 @@ Compare the metrics of the big tree to the vanilla tree- which one predicts the 
 
 *Hint: you'll need https://tidymodels.github.io/parsnip/reference/decision_tree.html*
 
-<div class="countdown" id="timer_5ea1c5b0" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d533" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1102,7 +1102,7 @@ Let's combine bootstrapping with decision trees.
 
 Do **Round 1** on your handouts.
 
-<div class="countdown" id="timer_5ea1c59c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d54d" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1130,7 +1130,7 @@ Now, let's add the aggregating part.
 Do **Round 2** on your handouts.
 
 
-<div class="countdown" id="timer_5ea1c4a3" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d5eb" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1238,7 +1238,7 @@ Compare the metrics of the random forest to your two single tree models (vanilla
 
 *Hint: you'll need https://tidymodels.github.io/parsnip/articles/articles/Models.html*
 
-<div class="countdown" id="timer_5ea1c6f7" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d458" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1322,7 +1322,7 @@ Challenge: Make 4 more random forest model specs, each using 4, 8, 12, and 20 va
 
 *Hint: you'll need https://tidymodels.github.io/parsnip/reference/rand_forest.html*
 
-<div class="countdown" id="timer_5ea1c79c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d4e9" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1617,7 +1617,7 @@ get_tree_fit(imp_fit)
 get_tree_fit(imp_fit)
 &gt; parsnip model object
 &gt; 
-&gt; Fit time:  299ms 
+&gt; Fit time:  302ms 
 &gt; Ranger result
 &gt; 
 &gt; Call:
@@ -1693,7 +1693,7 @@ class: your-turn
 
 Make a new model spec called `treebag_imp_spec` to fit a bagged classification tree model. Set the variable `importance` mode to "permutation". Plot the variable importance- which variable was the most important?
 
-<div class="countdown" id="timer_5ea1c5f4" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d6bf" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
