--- a/slides/01-model.html
+++ b/slides/01-model.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Build a model</title>
+    <title>Build A Model</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
     <meta name="date" content="2020-04-23" />
@@ -30,9 +30,9 @@ layout: true
 
 class: title-slide, center, bottom
 
-# Build a model
+# Build A Model
 
-## Tidymodels, Virtually: 1
+## Tidymodels, Virtually &amp;mdash; Session 01
 
 ### Alison Hill 
 
@@ -360,7 +360,7 @@ Write a pipe that creates a model that uses `lm()` to fit a linear regression. S
 *Hint: you'll need https://tidymodels.github.io/parsnip/articles/articles/Models.html*
 
 
-<div class="countdown" id="timer_5ea1c9a9" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d596" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -432,7 +432,7 @@ give the same results as
 lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 ```
 
-<div class="countdown" id="timer_5ea1c90f" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d23f" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -455,7 +455,7 @@ lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 lm_fit
 &gt; parsnip model object
 &gt; 
-&gt; Fit time:  2ms 
+&gt; Fit time:  1ms 
 &gt; 
 &gt; Call:
 &gt; stats::lm(formula = formula, data = data)
@@ -541,7 +541,7 @@ Fill in the blanks. Use `predict()` to
 
 *Hint: Be sure to remove every `_` before running the code!*
 
-<div class="countdown" id="timer_5ea1c9cc" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d3d6" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -791,7 +791,7 @@ In your teams, decide which model:
 
 ]
 
-<div class="countdown" id="timer_5ea1c7cd" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d351" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -993,7 +993,7 @@ Use `initial_split()`, `training()`, `testing()`, `lm()` and `rmse()` to:
 
 Keep `set.seed(100)` at the start of your code.
 
-<div class="countdown" id="timer_5ea1c98d" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d55a" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
