--- a/slides/02-resample.html
+++ b/slides/02-resample.html
@@ -4,7 +4,7 @@
     <title>Resample Models</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
-    <meta name="date" content="2020-04-22" />
+    <meta name="date" content="2020-04-23" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/font-awesome/css/fontawesome-all.min.css" rel="stylesheet" />
@@ -32,7 +32,7 @@ class: title-slide, center, bottom
 
 # Resample Models
 
-## Tidymodels, Virtually: 3
+## Tidymodels, Virtually &amp;mdash; Session 02
 
 ### Alison Hill 
 
@@ -149,7 +149,7 @@ Run the first code chunk. Then fill in the blanks to
 
 1. Extract the rmse of the fit.
 
-<div class="countdown" id="timer_5ea121c4" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d337" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -185,7 +185,7 @@ What would happen if you repeated this process? Would you get the same answers? 
 
 Then rerun the last code chunk from Your Turn 1. Do you get the same answer?
 
-<div class="countdown" id="timer_5ea12304" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d4be" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -341,7 +341,7 @@ class: your-turn
 
 Rerun the code below 10 times and then compute the mean of the results (you will need to jot them down as you go).
 
-<div class="countdown" id="timer_5ea12268" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d251" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -468,7 +468,7 @@ cv_folds &lt;-
 cv_folds
 ```
 
-<div class="countdown" id="timer_5ea12331" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d36e" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -630,7 +630,7 @@ all_wf %&gt;%
   rmse(truth, .pred)
 ```
 
-<div class="countdown" id="timer_5ea12436" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d48b" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -665,7 +665,7 @@ and one that fits the square foot model,
 
 Then use `fit_resamples` and `cv_folds` to compare the performance of each.
 
-<div class="countdown" id="timer_5ea122ae" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d61e" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">06</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -754,7 +754,7 @@ class: your-turn
 
 Work together with your teammates to complete the Cross-Validation handout.
 
-<div class="countdown" id="timer_5ea12105" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d5d5" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -922,7 +922,7 @@ class: your-turn
 Modify the code below to return the **Mean Absolute Error.** Visit 
 &lt;https://tidymodels.github.io/yardstick/reference/index.html&gt; to find the right function to use.
 
-<div class="countdown" id="timer_5ea122c0" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d4cf" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
