--- a/slides/03-recipes.html
+++ b/slides/03-recipes.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Preprocess your data</title>
+    <title>Preprocess Your Data</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
-    <meta name="date" content="2020-04-22" />
+    <meta name="date" content="2020-04-23" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/font-awesome/css/fontawesome-all.min.css" rel="stylesheet" />
@@ -30,9 +30,9 @@ layout: true
 
 class: title-slide, center, bottom
 
-# Preprocess your data
+# Preprocess Your Data
 
-## Tidymodels, Virtually: 2
+## Tidymodels, Virtually &amp;mdash; Session 03
 
 ### Alison Hill 
 
@@ -995,7 +995,7 @@ Write a recipe for the `Sale_Price ~ .` variables that:
 
 Save the result as `pca_rec`
 
-<div class="countdown" id="timer_5ea12560" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d5e0" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1067,7 +1067,7 @@ class: your-turn
 
 Make a workflow that combines `pca_rec` and with `lm_spec`.
 
-<div class="countdown" id="timer_5ea12276" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d45b" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1145,7 +1145,7 @@ class: your-turn
 
 Try our pca workflow to predict sale price with the `ames_test` data. What is the RMSE?
 
-<div class="countdown" id="timer_5ea12554" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d57f" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1192,7 +1192,7 @@ Then update `pca_wf` to use the new recipe.
 
 *Hint: Guess. Use tab completion. Or visit http://tidymodels.github.io/recipes/reference/index.html.*
 
-<div class="countdown" id="timer_5ea12529" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea1d2a6" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
