--- a/slides/00-intro.html
+++ b/slides/00-intro.html
@@ -177,12 +177,89 @@ How long has your state had stay-at-home orders in place?
 ]
 
 ---
+class: middle, center, frame
+
+# Two cultures
+
+.pull-left[
+
+### Statistics
+]
+
+.pull-right[
+
+
+### Machine Learning
+]
+
+---
+class: middle, center, frame
+
+# Quiz
+
+##Which is which?
+
+.pull-left[
+
+model first
+
+inference emphasis
+]
+
+.pull-right[
+
+data first
+
+prediction emphasis
+]
+
+---
+class: middle, center, frame
+
+# Quiz
+
+##Which is which?
+
+.pull-left[
+
+model first
+
+inference emphasis
+
+### Statistics
+]
+
+.pull-right[
+
+data first
+
+prediction emphasis
+
+### Machine Learning
+]
+
+
+
+---
+name: train-love
 background-image: url(images/train.jpg)
 background-size: contain
 background-color: #f6f6f6
+
+---
+template: train-love
 class: center, top
 
 # Statistics
+
+---
+template: train-love
+class: bottom
+
+
+&gt; *"Statisticians, like artists, have the bad habit of falling in love with their models."*
+&gt;
+&gt; &amp;mdash; George Box
 
 ---
 class: freight-slide, center, inverse
