add links to intro slides

--- a/slides/00-intro.html
+++ b/slides/00-intro.html
@@ -48,13 +48,40 @@ class: title-slide, center, bottom
 ### Alison Hill 
 
 
+
+
+
+
+
+
+---
+name: clouds2
+background-image: url(images/Clouds2.jpg)
+background-size: cover
+
+---
+template: clouds2
+class: middle, center
+
+.pull-left[
+# &lt;i class="fas fa-cloud"&gt;&lt;/i&gt;
+
+https://bit.ly/tmv-chop-cloud
+]
+
+.pull-right[
+
+# &lt;i class="fab fa-google"&gt;&lt;/i&gt;
+
+https://bit.ly/tmv-chop
+
+]
+
 ---
 name: clouds
 class: center, middle
 background-image: url(images/Clouds.jpg)
 background-size: cover
-
-
 
 ---
 template: clouds
@@ -66,12 +93,7 @@ template: clouds
 Hello- I'm so happy you could join us today. 
 
 ---
-name: clouds2
-background-image: url(images/Clouds2.jpg)
-background-size: cover
-
----
-template: clouds2
+template: clouds
 class: middle, center
 
 
@@ -432,9 +454,11 @@ class: frame, middle, center
 ---
 class: frame, middle, center
 
-# Our Google Doc
+# Our classroom
 
-https://bit.ly/tmv-chop
+Google Doc: https://bit.ly/tmv-chop
+
+RStudio Cloud: https://bit.ly/tmv-chop-cloud
 
 
 ---
