add footer link to slides

--- a/slides/00-intro.html
+++ b/slides/00-intro.html
@@ -4,7 +4,7 @@
     <title>Tidymodels, Virtually</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
-    <meta name="date" content="2020-04-23" />
+    <meta name="date" content="2020-04-24" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <meta name="description" content="Tidymodels, Virtually"/>
@@ -35,7 +35,7 @@
 
 layout: true
 
-&lt;a class="footer-link" href="TBD"&gt;TBD&lt;/a&gt;
+&lt;a class="footer-link" href="https://tmv.netlify.app/"&gt;https://tmv.netlify.app/&lt;/a&gt;
 
 ---
 
@@ -410,7 +410,7 @@ background-size: contain
 
 ```r
 library(tidymodels)
-## ── Attaching packages ─────────────────────────────────────────────────────────────────────────────────── tidymodels 0.1.0 ──
+## ── Attaching packages ────────────────────────────────────────────────── tidymodels 0.1.0 ──
 ## ✓ broom     0.5.5      ✓ recipes   0.1.10
 ## ✓ dials     0.0.4      ✓ rsample   0.0.6 
 ## ✓ dplyr     0.8.5      ✓ tibble    3.0.0 
@@ -422,7 +422,7 @@ library(tidymodels)
 ## Warning: package 'rsample' was built under R version 3.6.2
 ## Warning: package 'tibble' was built under R version 3.6.2
 ## Warning: package 'tune' was built under R version 3.6.2
-## ── Conflicts ────────────────────────────────────────────────────────────────────────────────────── tidymodels_conflicts() ──
+## ── Conflicts ───────────────────────────────────────────────────── tidymodels_conflicts() ──
 ## x purrr::discard()  masks scales::discard()
 ## x dplyr::filter()   masks stats::filter()
 ## x dplyr::lag()      masks stats::lag()
