--- a/slides/01-model.html
+++ b/slides/01-model.html
@@ -4,7 +4,7 @@
     <title>Build A Model</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
-    <meta name="date" content="2020-04-23" />
+    <meta name="date" content="2020-04-24" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/countdown/countdown.css" rel="stylesheet" />
@@ -44,7 +44,8 @@
 
 layout: true
 
-&lt;a class="footer-link" href="TBD"&gt;TBD&lt;/a&gt;
+&lt;a class="footer-link" href="https://tmv.netlify.app/"&gt;https://tmv.netlify.app/&lt;/a&gt;
+
 
 ---
 
@@ -474,7 +475,7 @@ Write a pipe that creates a model that uses `lm()` to fit a linear regression. S
 *Hint: you'll need https://tidymodels.github.io/parsnip/articles/articles/Models.html*
 
 
-<div class="countdown" id="timer_5ea27a4c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea2ffa1" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -563,7 +564,7 @@ give the same results as
 lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 ```
 
-<div class="countdown" id="timer_5ea27b25" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea2fc60" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -586,7 +587,7 @@ lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 lm_fit
 # parsnip model object
 # 
-# Fit time:  2ms 
+# Fit time:  1ms 
 # 
 # Call:
 # stats::lm(formula = formula, data = data)
@@ -690,7 +691,7 @@ Fill in the blanks. Use `predict()` to
 
 *Hint: Be sure to remove every `_` before running the code!*
 
-<div class="countdown" id="timer_5ea27a57" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea2fd0b" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -940,7 +941,7 @@ Take a minute and decide which model:
 
 ]
 
-<div class="countdown" id="timer_5ea27c01" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea2ff1c" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1138,7 +1139,7 @@ Use `initial_split()`, `training()`, `testing()`, `lm()` and `rmse()` to:
 
 Keep `set.seed(100)` at the start of your code.
 
-<div class="countdown" id="timer_5ea27cce" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea2fe9c" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
