--- a/slides/02-resample.html
+++ b/slides/02-resample.html
@@ -44,7 +44,8 @@
 
 layout: true
 
-&lt;a class="footer-link" href="TBD"&gt;TBD&lt;/a&gt;
+&lt;a class="footer-link" href="https://tmv.netlify.app/"&gt;https://tmv.netlify.app/&lt;/a&gt;
+
 
 ---
 
@@ -137,7 +138,7 @@ Run the first code chunk. Then fill in the blanks to
 2. Fit the `rt_spec` to the training set.
 3. Predict with the testing set and compute the rmse of the fit.
 
-<div class="countdown" id="timer_5ea2970c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea2fe68" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -169,7 +170,7 @@ What would happen if you repeated this process? Would you get the same answers?
 
 Then rerun the last code chunk from Your Turn 1. Do you get the same answer? Try it a few times.
 
-<div class="countdown" id="timer_5ea29856" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea2fdd4" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -474,7 +475,7 @@ cv_folds &lt;-
 cv_folds
 ```
 
-<div class="countdown" id="timer_5ea296c7" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea2fe26" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -660,7 +661,7 @@ rt_spec %&gt;%
   rmse(truth, .pred)
 ```
 
-<div class="countdown" id="timer_5ea29914" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea2fdcf" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
