remove footer link

--- a/slides/01-model.html
+++ b/slides/01-model.html
@@ -42,13 +42,6 @@
 
 
 
-layout: true
-
-&lt;a class="footer-link" href="https://tmv.netlify.app/"&gt;https://tmv.netlify.app/&lt;/a&gt;
-
-
----
-
 class: title-slide, center, bottom
 
 # Build A Model
@@ -475,7 +468,7 @@ Write a pipe that creates a model that uses `lm()` to fit a linear regression. S
 *Hint: you'll need https://tidymodels.github.io/parsnip/articles/articles/Models.html*
 
 
-<div class="countdown" id="timer_5ea2ffa1" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea30305" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -564,7 +557,7 @@ give the same results as
 lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 ```
 
-<div class="countdown" id="timer_5ea2fc60" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea301fc" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -587,7 +580,7 @@ lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 lm_fit
 # parsnip model object
 # 
-# Fit time:  1ms 
+# Fit time:  3ms 
 # 
 # Call:
 # stats::lm(formula = formula, data = data)
@@ -691,7 +684,7 @@ Fill in the blanks. Use `predict()` to
 
 *Hint: Be sure to remove every `_` before running the code!*
 
-<div class="countdown" id="timer_5ea2fd0b" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea3020f" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -941,7 +934,7 @@ Take a minute and decide which model:
 
 ]
 
-<div class="countdown" id="timer_5ea2ff1c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea300ac" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1139,7 +1132,7 @@ Use `initial_split()`, `training()`, `testing()`, `lm()` and `rmse()` to:
 
 Keep `set.seed(100)` at the start of your code.
 
-<div class="countdown" id="timer_5ea2fe9c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea30195" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
